<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="#f8f9fe">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/actionbar_background"
            android:clickable="false"
            android:paddingLeft="15dip"
            android:scaleType="center"
            android:src="@drawable/logodiagnos" />

        <TextView
            android:id="@+id/NameTechnicien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:textColor="#000"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/TypePanneDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="@string/typeP"
            android:textColor="#000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/TypePanneDescript2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:text="@string/typeP"
            android:textColor="#ff29549f"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/PanneDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:text="@string/Panne"
            android:textColor="#000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/PanneDescript2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:text="@string/Panne"
            android:textColor="#ff29549f"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/DescriptionDiagnostic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:text="@string/DescriptionDiagnos"
            android:textColor="#000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/DiagnosticText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:paddingTop="20dp"
            android:textColor="#ff29549f"
            android:textSize="20dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/envoyer" />

    </LinearLayout>

</ScrollView>